--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "react": "~16.9.0",
         "react-dom": "~16.9.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
-        "react-native-web": "~0.11.7"
+        "react-native-web": "~0.11.7",
+        "expo-constants": "~9.0.0",
+        "react-native-gesture-handler": "~1.6.0"
     },
     "devDependencies": {
         "babel-preset-expo": "~8.1.0",
