--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
         "react-native-gesture-handler": "~1.6.0",
         "react-native-web": "~0.11.7",
-        "yup": "^0.29.1"
+        "yup": "^0.29.1",
+        "expo-image-picker": "~8.1.0"
     },
     "devDependencies": {
         "babel-preset-expo": "~8.1.0",
